# stalonetray

./: .gitignore  AUTHORS  Makefile.am  README.md  buildman.sh  configure.ac  generate-manpage.sh  meson.build  meson.format  meson.options  stalonetray.xml.in  stalonetrayrc.sample  stalonetrayrc.sample.in
.github/workflows/: build.yml  ci.yml  lint.yml  merge.yml  release.yml
src/: Makefile.am  common.h  debug.c  debug.h  drag.c  drag.h  embed.c  icons.c  icons.h  image.c  kde_tray.c  layout.c  layout.h  main.c  meson.build  order.c  order.h  scrollbars.c  settings.c  settings.h  tray.c  tray.h  wmh.c  wmh.h  xembed.c  xinerama.c  xinerama.h  xutils.c  xutils.h
tests/: meson.build  test_settings.c
utils/tray-xembed-test/: xutils.c  xutils.h
