project_sources += [
  'src/debug.c',
  'src/embed.c',
  'src/icons.c',
  'src/image.c',
  'src/layout.c',
  'src/main.c',
  'src/scrollbars.c',
  'src/settings.c',
  'src/tray.c',
  'src/wmh.c',
  'src/xembed.c',
  'src/xinerama.c',
  'src/xutils.c',
]

if get_option('native_kde').enabled()
  project_sources += ['src/kde_tray.c']
endif
